# web3-authentication-shuttle

./: README.md
back/: Cargo.toml  schema.sql
back/src/: errors.rs  lib.rs  web3.rs
front/: .env  index.html  package.json
front/src/: App.tsx  index.css
front/src/back/: api.ts  utils.ts
front/src/components/: Snackbar.tsx
front/src/hooks/: useSnackBar.tsx
front/src/pages/: Login.tsx
