[package]
name = "back"
version = "0.1.0"
edition = "2021"
publish = false

[features]


[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-axum"] }
axum = "0.6.4"
sync_wrapper = "0.1.1"
serde_json = "1.0.91"
tracing = "0.1.37"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
serde = "1.0.152"
secp256k1 = { version = "0.26.0", features = ["bitcoin-hashes", "recovery", "global-context"] }
hex = "0.4.3"
sha3 = "0.10.6"

